src/test/test-models/bad/validate_add_var_bad2.stan
parameters {
  int m;
  real y;
}
model {
  y ~ normal(0,1);
}
